<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lt_register"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lt_register" />

        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            style="@style/LargeTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lt_register"
            />

        <TextView
            android:id="@+id/tv_description_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_register_description"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            style="@style/BodyText"
            app:layout_constraintTop_toBottomOf="@id/tv_title_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="VisualLintLongText" />

        <com.rivaldofez.storymessage.customviews.EmailEditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            style="@style/EditTextType1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_register"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/fullname"
            android:drawableStart="@drawable/ic_person_24"
            android:drawablePadding="8dp"
            android:autofillHints="name"
            android:inputType="text"
            style="@style/EditTextType1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            tools:ignore="VisualLintTextFieldSize" />

        <com.rivaldofez.storymessage.customviews.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/EditTextType1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_fullname"
            android:layout_marginTop="16dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/tv_login_intro"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_to_login_intro"
            app:layout_constraintEnd_toStartOf="@+id/tv_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/BodyTextAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_login_intro"
            app:layout_constraintTop_toTopOf="@+id/tv_login_intro"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>